--- a/town_ws/src/regent_park/CMakeLists.txt
+++ b/town_ws/src/regent_park/CMakeLists.txt
@@ -32,7 +32,8 @@ endif()
 
 ament_package()
 
-add_executable(billy_node src/billy.cpp)
+# add_executable(billy_node src/billy.cpp)
+add_executable(billy_node src/billy_oop.cpp)
 ament_target_dependencies(billy_node rclcpp)
 
 install(TARGETS
